<resources>
    <string name="app_name">Taxi</string>
    <string name="cart1">cart</string>
    <string name="cart2">cart_2</string>
    <string name="kart1">cart_1</string>
    <string name="cart">cart1</string>
    <string name="cart5">cart5</string>
    <string name="cart6">cart6</string>
    <string name="cart7">cart7</string>
    <string name="cart8">cart8</string>
    <string name="cart9">cart9</string>
    <string name="cart10">cart10</string>
    <string name="cart11">cart11</string>
    <string name="sign_in">SIGN IN</string>
    <string name="cart13">cart13</string>
    <string name="cart14">cart14</string>
    <string name="cart15">cart15</string>
    <string name="cart16">cart16</string>
    <string name="cart41">cart17</string>
    <string name="cart17">cart17</string>
    <string name="cart18">cart18</string>
    <string name="cart19">cart19</string>
    <string name="cart20">cart20</string>
    <string name="cart21">cart21</string>
    <string name="cart25">cart25</string>
    <string name="cart26">cart26</string>
    <string name="cart27">cart27</string>
    <string name="cart28">cart28</string>
    <string name="cart29">cart28</string>
    <string name="cart30">cart30</string>
    <string name="cart31">cart31</string>
    <string name="cart33">cart33</string>
    <string name="cart34">cart34</string>
    <string name="cart35">cart35</string>
    <string name="cart36">cart36</string>
    <string name="cart37">cart37</string>
    <string name="cart38">cart38</string>
    <string name="cart39">cart39</string>
    <string name="cart40">cart40</string>
    <string name="cart43">cart43</string>
    <string name="cart45">cart45</string>
    <string name="ivanov_mail_com">Ivanov@mail.com</string>
    <string name="pass">**********</string>
</resources>