<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="1000dp"
        android:layout_height="1000dp"
        android:contentDescription="@string/kart1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/city1" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="692dp"
        android:layout_height="914dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.688"
        app:srcCompat="@drawable/rectangle8"
        android:contentDescription="@string/cart9" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="384dp"
        android:layout_height="46dp"
        android:layout_marginBottom="256dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/rectangle2"
        android:contentDescription="@string/cart13" />

    <Button
        android:id="@+id/button33"
        android:layout_width="300dp"
        android:layout_height="67dp"
        android:backgroundTint="#F6BC1A"
        android:text="@string/sign_in"
        android:textSize="24sp"
        android:onClick="goGlavnuy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView23"
        app:layout_constraintVertical_bias="0.561"
        app:cornerRadius="8dp"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />



    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="26dp"
        android:layout_height="18dp"
        android:layout_marginStart="40dp"
        android:contentDescription="@string/cart10"
        app:layout_constraintBottom_toBottomOf="@+id/imageView17"
        app:layout_constraintStart_toStartOf="@+id/imageView17"
        app:layout_constraintTop_toTopOf="@+id/imageView17"
        app:srcCompat="@drawable/vector0"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView23"
        android:layout_width="384dp"
        android:layout_height="46dp"
        android:layout_marginBottom="188dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/rectangle2"
        android:contentDescription="@string/cart8" />

    <ImageView
        android:id="@+id/imageView24"
        android:layout_width="23dp"
        android:layout_height="27dp"
        android:layout_marginStart="40dp"
        android:contentDescription="@string/cart7"
        app:layout_constraintBottom_toBottomOf="@+id/imageView23"
        app:layout_constraintHorizontal_bias="0.586"
        app:layout_constraintStart_toStartOf="@+id/imageView23"
        app:layout_constraintTop_toTopOf="@+id/imageView23"
        app:layout_constraintVertical_bias="0.526"
        app:srcCompat="@drawable/vector9"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView26"
        android:layout_width="21dp"
        android:layout_height="23dp"
        android:contentDescription="@string/cart17"
        app:layout_constraintBottom_toTopOf="@+id/button33"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView23"
        app:layout_constraintVertical_bias="0.533"
        app:srcCompat="@drawable/rectangle100"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView27"
        android:layout_width="122dp"
        android:layout_height="34dp"
        android:contentDescription="@string/cart15"
        app:layout_constraintBottom_toTopOf="@+id/button33"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@+id/imageView26"
        app:layout_constraintTop_toBottomOf="@+id/imageView23"
        app:layout_constraintVertical_bias="0.703"
        app:srcCompat="@drawable/remembermy" />

    <ImageView
        android:id="@+id/imageView29"
        android:layout_width="157dp"
        android:layout_height="38dp"
        android:contentDescription="@string/cart16"
        app:layout_constraintBottom_toTopOf="@+id/button33"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.757"
        app:layout_constraintStart_toEndOf="@+id/imageView27"
        app:layout_constraintTop_toBottomOf="@+id/imageView23"
        app:layout_constraintVertical_bias="0.652"
        app:srcCompat="@drawable/forgotpassword" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/cart40"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="goRegistracia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button33"
        app:srcCompat="@drawable/create"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/cart43"
        app:layout_constraintBottom_toTopOf="@+id/imageView17"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.304"
        app:srcCompat="@drawable/group8" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ivanov_mail_com"
        android:textColorHint="@color/black"
        android:backgroundTint="@color/white"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/imageView17"
        app:layout_constraintEnd_toEndOf="@+id/imageView17"
        app:layout_constraintHorizontal_bias="0.296"
        app:layout_constraintStart_toEndOf="@+id/imageView21"
        app:layout_constraintTop_toTopOf="@+id/imageView17"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TouchTargetSizeCheck"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextNumberPassword2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberPassword"
        android:hint="@string/pass"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/imageView23"
        app:layout_constraintEnd_toEndOf="@+id/imageView23"
        android:backgroundTint="@color/white"
        app:layout_constraintHorizontal_bias="0.262"
        app:layout_constraintStart_toEndOf="@+id/imageView24"
        app:layout_constraintTop_toTopOf="@+id/imageView23"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
        android:autofillHints="" />

</androidx.constraintlayout.widget.ConstraintLayout>